# kathaloq

./: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  THIRD-PARTY-LICENSES.html  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: catalog.rs  licenses.rs  mod.rs  scan.rs
src-tauri/src/db/: connection.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/scanner/: media.rs  mod.rs  updater.rs  walker.rs
src-tauri/tests/: db_test.rs
src/lib/components/: AddCatalogModal.svelte  ConfirmModal.svelte  ContextMenu.svelte  FileList.svelte  InfoModal.svelte  PreviewPanel.svelte  PreviewPanel.test.ts  SettingsModal.svelte  Sidebar.svelte  StatusBar.svelte  Toolbar.svelte  TreeNode.svelte  UpdateCatalogModal.svelte
src/lib/services/: format.test.ts  format.ts  tauri.ts
src/lib/stores/: catalog.ts  settings.ts  sidebar.ts  theme.ts
src/lib/types/: index.ts
src/styles/: app.css  themes.css
