[package]
name = "kathaloq"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "kathaloq_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt"] }
lofty = "0.22"
